--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,13 @@
 <string name="alas_jajargenjang">Alas</string>
 <string name="tinggi_jajargenjang">Tinggi</string>
 <dimen name="horizontal_margin">16dp</dimen>
-
+    <string name="judul_kurus">Mengatasi Kekurusan</string>
+    <string name="judul_ideal">Menjaga Tetap Ideal</string>
+    <string name="judul_gemuk">Mengatasi Kegemukan</string>
+    <string name="saran_kurus">Cobalah untuk makan porsi besar, seperti burger
+berukuran raksasa ini.</string>
+    <string name="saran_ideal">Pertahankan gaya hidupmu! Tapi jangan kebanyakan
+gaya karena itu berbahaya.</string>
+    <string name="saran_gemuk">Cobalah untuk olahraga lari. Kemanapun boleh,
+asal tidak lari dari kehidupan.</string>
 </resources>
