Membuat navigasi sederhana

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@ berukuran raksasa ini.</string>
 gaya karena itu berbahaya.</string>
     <string name="saran_gemuk">Cobalah untuk olahraga lari. Kemanapun boleh,
 asal tidak lari dari kehidupan.</string>
+    <string name="liat_saran">Lihat Saran</string>
 </resources>
