--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,9 @@ gaya karena itu berbahaya.</string>
     <string name="saran_gemuk">Cobalah untuk olahraga lari. Kemanapun boleh,
 asal tidak lari dari kehidupan.</string>
     <string name="liat_saran">Lihat Saran</string>
+    <string name="copyright">Hitung BMI merupakan sebuah aplikasi Android untuk
+menghitung body mass index (BMI) sehingga seseorang dapat mengetahui apakah
+berat badannya ideal, gemuk atau kurus.\n\nAplikasi ini dibuat untuk kelas
+Mobpro 1. Temukan kodenya di https://github.com/indraazimi/hitungbmi\n\nCopyright © 2021 Indra Azimi.\nAll rights reserved.</string>
+    <string name="tentang_aplikasi">Tentang Aplikasi</string>
 </resources>
